class based views

--- a/my_app/templates/home.html
+++ b/my_app/templates/home.html
@@ -69,7 +69,13 @@
                 </div>
             </div>
             </div>
-                {{ data }}
+                
+
+            {%for post in post%}
+              <h1>{{post.title}}</h1>
+              <h2>{{post.content}}</h2>
+              <p>{{post.date}}</p>
+            {%endfor%}
 
     </div>
 
