--- a/my_app/templates/login.html
+++ b/my_app/templates/login.html
@@ -1,5 +1,8 @@
 <form action="{% url 'login' %}" method="post">
     {% csrf_token %}
     {{ form }}
+        {% if request.GET.next %}
+			<input type="hidden" name="next" value="{{request.GET.next}}">
+		{% endif %}
     <button type="submit" name="login">login</button>
 </form>
