--- a/my_app/templates/home.html
+++ b/my_app/templates/home.html
@@ -3,10 +3,11 @@
 {% block content %}
 
                   <div class="card card-background container-fluid" >
+                    <h2 class="card-title">Write your heart out..</h2>
                   </div>
 
                 
-            <div class="container all-posts">
+            <!-- <div class="container all-posts">
             {%for post in post%}
               <a href="{% url 'post_detail' post.id %}"><h1>{{post.title}}</h1></a>
               <h2>{{post.content}}</h2>
@@ -20,7 +21,7 @@
                     {%endif%}
                 {%endif%}
             {%endfor%}
-            </div>
+            </div> -->
 
     
 
