--- a/my_app/templates/register.html
+++ b/my_app/templates/register.html
@@ -1,10 +1,33 @@
 {% extends 'base.html' %}
+{%load crispy_forms_tags%}
 
 {% block content %}
+</br></br></br>
+
+<div class="container row l8" >
     <form action="{% url 'register' %}" method="post">
     {% csrf_token %}
-    {{ form }}
-    <button type="submit" value="register">register</button>
+    <div class="input-field col s8">
+        <label>{{form.username.label}}</label>
+        {{form.username}}
+    </div>
+    <div class="input-field col s8">
+        <label>{{form.email.label}}</label>
+        {{form.email}}
+    </div>    
+    <div class="input-field col s8">
+        <label>{{form.password1.label}}</label>
+        {{form.password1}}
+    </div>
+    <div class="input-field col s8">
+        <label>{{form.password2.label}}</label>
+        {{form.password2}}
+    </div>
+    <div class="col s8">
+    <button class="btn waves-effect blue" type="submit" name="action">Register</button>
+    </div>
     </form>
+</div>
+
 
 {% endblock %}
